// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`handle display deployments > should handle display deployments -- show env ip error 1`] = `
[MockFunction log] {
  "calls": [
    [
      "[1mStaging[22m",
    ],
    [
      "[90m┌───────────────[39m[90m┬───────────────────┐[39m
[90m│[39m Version       [90m│[39m productionVersion [90m│[39m
[90m├───────────────[39m[90m┼───────────────────┤[39m
[90m│[39m Specification [90m│[39m 100ms             [90m│[39m
[90m└───────────────[39m[90m┴───────────────────┘[39m",
    ],
    [
      " ",
    ],
    [
      " ",
    ],
    [
      "[1mProduction [32m●[39m[22m",
    ],
    [
      "[90m┌───────────────[39m[90m┬────────────────┐[39m
[90m│[39m Version       [90m│[39m stagingVersion [90m│[39m
[90m├───────────────[39m[90m┼────────────────┤[39m
[90m│[39m Specification [90m│[39m 50ms           [90m│[39m
[90m└───────────────[39m[90m┴────────────────┘[39m",
    ],
    [
      " ",
    ],
    [
      " ",
    ],
    [
      "[1mCanary [22m",
    ],
    [
      "[90m┌───────────────[39m[90m┬──────┐[39m
[90m│[39m Version       [90m│[39m      [90m│[39m
[90m├───────────────[39m[90m┼──────┤[39m
[90m│[39m Specification [90m│[39m 50ms [90m│[39m
[90m└───────────────[39m[90m┴──────┘[39m",
    ],
    [
      " ",
    ],
    [
      "💬 You can visit: [93mundefined[39m",
    ],
    [
      " ",
    ],
    [
      "[43mActive[49m Staging",
    ],
    [
      "[42mActive[49m Production",
    ],
    [
      "[90m┌────────────[39m[90m┬───────────────────[39m[90m┬─────────────┐[39m
[90m│[39m[31m Version    [39m[90m│[39m[31m Created           [39m[90m│[39m[31m Description [39m[90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m unstable   [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m v1         [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m v2         [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m└────────────[39m[90m┴───────────────────[39m[90m┴─────────────┘[39m",
    ],
    [
      " ",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`handle display deployments > should handle display deployments success 1`] = `
[MockFunction log] {
  "calls": [
    [
      "[1mStaging[22m",
    ],
    [
      "Staging IP: [32m0.0.0.0[39m",
    ],
    [
      "[90m┌───────────────[39m[90m┬───────────────────┐[39m
[90m│[39m Version       [90m│[39m productionVersion [90m│[39m
[90m├───────────────[39m[90m┼───────────────────┤[39m
[90m│[39m Specification [90m│[39m 100ms             [90m│[39m
[90m└───────────────[39m[90m┴───────────────────┘[39m",
    ],
    [
      " ",
    ],
    [
      " ",
    ],
    [
      "[1mProduction [32m●[39m[22m",
    ],
    [
      "[90m┌───────────────[39m[90m┬────────────────┐[39m
[90m│[39m Version       [90m│[39m stagingVersion [90m│[39m
[90m├───────────────[39m[90m┼────────────────┤[39m
[90m│[39m Specification [90m│[39m 50ms           [90m│[39m
[90m└───────────────[39m[90m┴────────────────┘[39m",
    ],
    [
      " ",
    ],
    [
      " ",
    ],
    [
      "[1mCanary [22m",
    ],
    [
      "[90m┌───────────────[39m[90m┬──────┐[39m
[90m│[39m Version       [90m│[39m      [90m│[39m
[90m├───────────────[39m[90m┼──────┤[39m
[90m│[39m Specification [90m│[39m 50ms [90m│[39m
[90m└───────────────[39m[90m┴──────┘[39m",
    ],
    [
      " ",
    ],
    [
      "💬 You can visit: [93mundefined[39m",
    ],
    [
      " ",
    ],
    [
      "[43mActive[49m Staging",
    ],
    [
      "[42mActive[49m Production",
    ],
    [
      "[90m┌────────────[39m[90m┬───────────────────[39m[90m┬─────────────┐[39m
[90m│[39m[31m Version    [39m[90m│[39m[31m Created           [39m[90m│[39m[31m Description [39m[90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m unstable   [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m v1         [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m├────────────[39m[90m┼───────────────────[39m[90m┼─────────────┤[39m
[90m│[39m v2         [90m│[39m 2021/1/1 08:00:00 [90m│[39m             [90m│[39m
[90m└────────────[39m[90m┴───────────────────[39m[90m┴─────────────┘[39m",
    ],
    [
      " ",
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;
